Folder structure reworked